5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1638_652.log
== TEST (2019-04-09 11:34:56) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = num //100
d2 = (num // 10) %10
d3 = (num // 10) %10

print(d1)
print(d2)
print(d3)
-- OUTPUT:
7
2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:35:19) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = num //100
d2 = (num // 10) 


print(d1)
print(d2)

-- OUTPUT:
7
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:35:34) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = num //100
d2 = (num / 10) 


print(d1)
print(d2)

-- OUTPUT:
7
72.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:36:08) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = num //100
d2 = (num / 10) 


print(d1)
print(d2)

-- OUTPUT:
7
72.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:36:27) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = num //100
d2 = (num //10) *10 


print(d1)
print(d2)

-- OUTPUT:
7
720
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:37:56) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = num //100
d2 = (num /100 ) 


print(d1)
print(d2)

-- OUTPUT:
7
7.28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:38:25) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = num //100
d2 = (num// 10  ) 


print(d1)
print(d2)

-- OUTPUT:
7
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:24:06) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = num / 100
print(d1)
-- OUTPUT:
7.28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:24:21) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = num / 100
print(d1)
-- OUTPUT:
7.28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:24:39) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = num // 100
print(d1)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:25:07) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
print(d1)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:29:42) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num // resto == 2)
	print("SIM")
else:
	print("NAO")
-- ERROR:
File "XXXX", line 5
    if(num // resto == 2)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:29:50) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num // resto == 2):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:34:06) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num // resto == 6):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:34:12) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num // resto == 6):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.300862
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:34:49) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num // resto == 6):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:35:23) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num // resto >= 2):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:35:33) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num // resto >= 2):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.151447
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:35:57) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num / resto >= 2):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:36:04) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num / resto >= 2):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.11796
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:38:44) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num + resto == d1 + resto):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:40:49) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num + resto == d1 + num):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:41:20) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num - resto == d1 + num):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:41:43) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num - resto == d1 + resto):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:45:12) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num - resto == d1 + resto):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:47:12) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num / resto != 0 ):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:47:21) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num / resto != 0 ):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.211159
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:47:59) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num / resto > 0 ):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:48:05) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num / resto > 0 ):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.183641
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:49:49) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num / resto > 0 ):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:50:16) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num / resto >= 0 ):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.244373
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:51:36) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num / resto >= 0 ):
	print("SIM")
else:
	print("NAO")
	
print(resto)
print(num)
print(d1)
-- OUTPUT:
SIM
28
728
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:53:18) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num / resto == d1/resto ):
	print("SIM")
else:
	print("NAO")

-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:10:24) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num + resto == d1 ):
	print("SIM")
else:
	print("NAO")

-- EXECUTION TIME:
0.199007
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:10:25) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num + resto == d1 ):
	print("SIM")
else:
	print("NAO")

-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:10:59) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num + resto == d1 ):
	print("SIM")
else:
	print("NAO")

-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:12:03) 
-- CODE:
num = int(input("numero de tres d:"))

d1 = (num // 100)*100
resto = num - d1
if(num + resto == d1 ):
	print("SIM")
else:
	print("NAO")
	
	
print(num)
print(resto)
print(d1)

-- OUTPUT:
NAO
728
28
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:41) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = (num // 100)*100
resto = num - n1
if(num - resto == n1 ):
	print("SIM")
else:
	print("NAO")
	
	
print(num)
print(resto)
print(d1)

-- EXECUTION TIME:
0.159074
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/652/main.py", line 13, in <module>
    print(d1)
NameError: name 'd1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:13:42) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = (num // 100)*100
resto = num - n1
if(num - resto == n1 ):
	print("SIM")
else:
	print("NAO")
	
	
print(num)
print(resto)
print(d1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(d1)
NameError: name 'd1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:07) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = (num // 100)*100
resto = num - n1
if(num - resto == n1 ):
	print("SIM")
else:
	print("NAO")
	
	
print(num)
print(resto)
print(n1)

-- OUTPUT:
SIM
728
28
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:14:15) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = (num // 100)*100
resto = num - n1
if(num - resto == n1 ):
	print("SIM")
else:
	print("NAO")
	
	
print(num)
print(resto)
print(n1)

-- EXECUTION TIME:
0.202792
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
728
28
700
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
789
89
700
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:14:20) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = (num // 100)*100
resto = num - n1
if(num - resto == n1 ):
	print("SIM")
else:
	print("NAO")
	
	


-- EXECUTION TIME:
0.11098
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:21) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = (num // 100)*100
resto = num - n1
if(num - resto == n1 ):
	print("SIM")
else:
	print("NAO")
	
	


-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:42) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = (num//100)*100
if(n1 % mun == 0 ):
	print("SIM")
else:
	print("NAO")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(n1 % mun == 0 ):
NameError: name 'mun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:55) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = (num//100)*100
if(n1 % num == 0 ):
	print("SIM")
else:
	print("NAO")
	

-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:45) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = (num//100)*100
if(num % n1== 0 ):
	print("SIM")
else:
	print("NAO")
	

-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:27:20) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num(num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n1 = num(num//100)*100
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:27:38) 
-- CODE:
num = int(input("numero de tres d:"))

n1 =(num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- OUTPUT:
NAO
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:27:58) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- OUTPUT:
SIM
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:01) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.130125
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
28
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:03) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.209328
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
28
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:05) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.170097
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
28
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:05) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.224884
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
89
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:05) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.259573
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
89
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:06) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.363074
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
28
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:06) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.405193
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
28
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:06) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.45423
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
28
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:06) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.520608
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/652/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:06) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.624517
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/652/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:06) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.48434
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/652/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:19) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- EXECUTION TIME:
0.149768
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
28
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:28:21) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	
print(n1)
-- OUTPUT:
SIM
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:28:49) 
-- CODE:
num = int(input("numero de tres d:"))

n1 = num - (num//100)*100

if(num % n1 == 0 ):
	print("SIM")
else:
	print("NAO")
	

-- EXECUTION TIME:
0.201346
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
